# redis-search-employee

./: LICENSE  pyproject.toml
employee/: employee.config  employee.csv  employee.json  employee.py  queries.py  upload_employee.py
tests/: test_redis_search_python.py
