[tool.poetry]
name = "redis-search-python"
version = "0.1.0"
description = ""
authors = ["Sitthakarn Prasomsup <sitthakarn.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis-om = "^0.0.27"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
